[package]
name = "rnm"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
colored = "2.1"
directories = "5.0"
anyhow = "1.0"
